# NeuralC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Activations/: Activations.cpp  Activations.h
Application/: Application.cpp  Application.h  Defaults.h  imguifilebrowser.h
Data/: Data.cpp  Data.h
ImGui/: Roboto-Regular.embed
Image/: Image.cpp  Image.h
Matrix/: Matrix.cpp  Matrix.h  MatrixOps.cpp  MatrixOps.h
Matrix/Cuda/: MatrixKernel.cpp  MatrixKernel.cu  MatrixKernel.h
NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
Utils/CudaArray/: CudaArray.h
Utils/ProgressBar/: ProgressBar.cpp  ProgressBar.h
Utils/ScopedTimer/: ScopedTimer.cpp  ScopedTimer.h
